Added the synthesizer and introduced the rate limit moderator

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,6 +4,11 @@
 gemini:
   api_key: "AIzaSyAVBAfM7qpGZF1XFAKWPiFsUXlCkwWAwk0"
   generation_model: "gemini-2.5-flash"
+  # Rate limiting configuration (Gemini free tier allows 10 requests/minute)
+  # We use 8 to leave a safety buffer
+  rate_limit:
+    max_calls: 8
+    time_window: 60  # seconds
 
 embeddings:
   provider: "google"
