--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,12 +2,12 @@
 # IMPORTANT: Replace "YOUR_GEMINI_API_KEY" with your actual Google AI Studio API key.
 # You can also set this as an environment variable named GOOGLE_API_KEY.
 gemini:
-  api_key: "AIzaSyCNlTy22YAn3GFceFwc-U0RRy1VMtZFPjA"
-  generation_model: "gemini-2.5-flash"
-  # Rate limiting configuration (Gemini free tier allows 10 requests/minute)
-  # Optimized: Use 9 for better performance while staying safe
+  api_key: "AIzaSyAVBAfM7qpGZF1XFAKWPiFsUXlCkwWAwk0"
+  generation_model: "gemini-2.5-flash-lite"
+  # Rate limiting configuration (Gemini Flash allows 15 RPM on free tier, 1000 RPD)
+  # Optimized: Use 14 for maximum speed while staying within limits
   rate_limit:
-    max_calls: 9
+    max_calls: 14
     time_window: 60  # seconds
   
   # API call optimization settings
