Refactor CMAR System: Remove unused files, enhance requirements, and implement persistent caching for LLM responses
- Updated `requirements.txt` to specify exact versions for core libraries.
- Refactored `streamlit_app.py` to improve UI and functionality, including a new clinical intake form.
- Enhanced `RateLimitedChatGoogleGenerativeAI` to use SQLite for persistent caching of LLM responses, improving efficiency and reducing redundant API calls.
- Adjusted `medical_retriever.py` to align with new vector store path.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,12 @@
 # requirements.txt
 # ===========================
 # Core libraries for stateful, multi-agent, and LLM applications
-langgraph                   # For building stateful, multi-agent workflows
-langchain                  # Core LangChain abstractions
-langchain-core             # LangChain core utilities
-langchain-community        # Community-contributed LangChain integrations
-langchain-huggingface      # HuggingFace integration for LangChain
-langchain-google-genai     # Google Gemini models integration for LangChain
+langgraph==1.0.2                   # For building stateful, multi-agent workflows
+langchain==1.0.3                  # Core LangChain abstractions
+langchain-core==1.0.3             # LangChain core utilities
+langchain-community==0.4.1        # Community-contributed LangChain integrations
+langchain-huggingface==1.0.1       # HuggingFace integration for LangChain
+langchain-google-genai==3.0.1     # Google Gemini models integration for LangChain
 
 # Environment and configuration management
 pyyaml                     # For YAML configuration files
@@ -23,6 +23,8 @@ tiktoken                   # Tokenizer for text splitting
 duckduckgo-search          # DuckDuckGo web search integration
 sentence-transformers      # Sentence embeddings (HuggingFace models)
 ddgs                       # Alternative DuckDuckGo search API
+beautifulsoup4             # XML/HTML parsing
+lxml                       # XML parser for BeautifulSoup
 
 # App and UI
 streamlit                  # Web app framework for Python
